fix gamelist on mobile

--- a/themes/minos/source/css/_partial/gamelist.styl
+++ b/themes/minos/source/css/_partial/gamelist.styl
@@ -9,6 +9,10 @@
   li
     padding: 0
     margin: 3px 0
+    img
+      @media mq-mobile
+        max-width: 100%
+        margin: 6px 0
     a
       margin: 0
       padding: 0
